tests/ui/const-generics/generic_const_exprs/assoc_const_unification/doesnt_unify_evaluatable.stderr
error: unconstrained generic constant
  --> $DIR/doesnt_unify_evaluatable.rs:9:11
   |
LL |     bar::<{ T::ASSOC }>();
   |           ^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); { T::ASSOC }]:`

error: aborting due to previous error

